[tool.poetry]
name = "payment_gateway"
version = "0.1.0"
description = "API based application payment gateway"
authors = ["Thibaut Lenouvel <thibautlenouvel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.68.0"
httpx = "^0.19.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
pyyaml = "^6.0.1"
freezegun = "^1.2.2"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
